--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,14 @@
 # OPENAI_MODEL=gpt-4o-mini
 # OPENAI_ORG_ID=org-...
 
-# Anthropic Configuration
-# ANTHROPIC_API_KEY=sk-ant-...
-# ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
+# Anthropic Configuration (REQUIS pour l'agent DeFi)
+ANTHROPIC_API_KEY=sk-ant-api03-...
+ANTHROPIC_MODEL=claude-3-5-sonnet-20240620
+
+# Social Media APIs (Optionnel pour monitoring avancé)
+# DISCORD_BOT_TOKEN=...
+# TWITTER_BEARER_TOKEN=...
+# TELEGRAM_BOT_TOKEN=...
 
 # MCP Servers Configuration
 # GITHUB_TOKEN=ghp_...
